--- a/app.cfg
+++ b/app.cfg
@@ -3,7 +3,7 @@ Database_Location=/var/www/feeder/feeder/feeder.db
 Feed_Button_GPIO_Pin=12
 Hopper_GPIO_Pin=11
 Hopper_Spin_Time=0.6
-Local_Camera_Site_Address=http://cjg342.duckdns.org:8081
+Local_Camera_Site_Address=http://yourremoteaddress.duckdns.org:8081
 Local_IP_Start=192
 Log_ButtonService_Filename=/var/www/feeder/feeder/logs/feederButtonService.log
 Log_TimeService_Filename=/var/www/feeder/feeder/logs/feederTimeService.log
